Version 2.1.8   unreleased

	* Add createSessionIfNecessary to SpringContextService (default false).
	
Version 2.1.7   14 Sep 2013

    * Refactor out common build code, such as code to run tests and generated Javadoc
    * Remove the tools subproject, which has been obsoleted by the Gradle build process.

Version 2.1.6   13 Sep 2013

    * Update dependencies to App Engine 1.8.4.
    * Add StringUtils.wrapLine() method that takes the newline to use.
    * Refactor out a lot of build functionality into shared Gradles plugins (cedar-build).

Version 2.1.5   10 Sep 2013

    * Fix publish process to place Maven artificts into maven/ subdirectory.

Version 2.1.4   10 Sep 2013

    * Push code to private Maven repository at maven.cedar-common.googlecode.com.
    * Minor changes to documentation and build scripts to support first "public" release.

Version 2.1.3   10 Sep 2013

    * Major reorganization of project layout with some package changes
    * Convert build process to Gradle (>= 1.7)
